delete useless files and fix bug

--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>com.example</groupId>
 	<artifactId>test_task_mega</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>test_tesk_mega</name>
-	<description>test_tesk_mega</description>
+	<name>test_task_mega</name>
+	<description>test_task_mega</description>
 	<url/>
 	<licenses>
 		<license/>
